# dropbear-humanoid-robot

Pelvis/humanoidpelvicgirdle_description/: CMakeLists.txt  package.xml
Pelvis/humanoidpelvicgirdle_description/launch/: robot_description.launch.py
RightArm/humanoidrightarm_description/: CMakeLists.txt  package.xml
RightLeg/humanoidrightleg_description/: CMakeLists.txt  package.xml
Torso/humanoidtorso_description/: CMakeLists.txt  package.xml
dropbear/: CMakeLists.txt  package.xml
dropbear-humanoid-robot/dropbear/: CMakeLists.txt
dropbear-humanoid-robot/dropbear_control/: package.xml  setup.cfg  setup.py
dropbear-humanoid-robot/simple_closed_loop_mechanism/: CMakeLists.txt  simple_closed_loop_mechanism_plugin.xml
dropbear-humanoid-robot/simple_closed_loop_mechanism/config/: controllers_configuration.yaml
dropbear-humanoid-robot/simple_closed_loop_mechanism/launch/: display.launch.py  gazebo_sim.launch.py
dropbear-humanoid-robot/simple_closed_loop_mechanism/scripts/: jtc_publisher_node.py
dropbear-humanoid-robot/simple_closed_loop_mechanism/src/: gazebo_sim_hw.cpp
dropbear-humanoid-robot/simple_closed_loop_mechanism/urdf/: ros2_control.xacro
dropbear/config/: controllers.yaml
dropbear/launch/: dropbear_detailed_gazebo.launch.py
dropbear_right_arm/: CMakeLists.txt  package.xml
dropbear_right_arm/config/: controllers.yaml
dropbear_right_arm/dropbear_right_arm/: hand_trajectory_publisher.py
dropbear_right_arm/launch/: arm_controllers.launch.py  arm_display.launch.py  arm_gazebo.launch.py
dropbear_right_arm/meshes/rightarm/: 2020_100mm__10__1.stl  2020_100mm__11__1.stl  6mm-bearing_1.stl  6mm-bearing__3__1.stl  6mm-bearing__4__1.stl  6mm-bearing__5__1.stl  6mm-bearing__7__1.stl  6mm-bearing__8__1.stl  6mm-bearing__9__1.stl  MG995_1.stl  MG995__1__1.stl  MG995__4__1.stl  MG995__6__1.stl  RMD-X8-Pro_MIR8_MIR1__1__1.stl  RMD-X8-Pro_MIR8_MIR1__2__1.stl  RMD-X8-Pro_MIR8_MIR1__3__1.stl  bicep-rotational-cuff-second-motor-bracket_1.stl  bicep-shoulder-bracket-exal__3__1.stl  bicep_1.stl  elbow-bridge-rear_1.stl  elbow-bridge-rear__1__1.stl  elbow-hangar1_1.stl  elbow-rear-hanger_1.stl  elbow-rear-hanger__1__1.stl  fan-mount_1.stl  fore-arm-bicep-motor-attatch_1.stl  forearm-elbow-motor-bracket-inner2_1.stl  forearm-elbow-motor-bracket-inner_1.stl  multiplex-stack-flat_1.stl  power-mount-arm_1.stl  second-forearm-motor-strap_1.stl  shoulder-ex-al-interface_1.stl  shoulder-ex-al-interface__1__1.stl  shoulder-roll-al-mot_MIR1__1__1.stl  shoulder-roll-al-mot_MIR1__2__1.stl  skateboard-bearing__7__1.stl  top-bracket-servo-strap_1.stl  yaw-waist-adapter-motor-exal_MIR1_1.stl  yaw-waist-adapter-motor-exal_MIR1__5__1.stl
dropbear_right_arm/urdf/: materials.xacro
dropbear_right_arm/urdf/gazebo/: arm.xacro  dropbear_right_arm.urdf.xacro
dropbear_right_arm/urdf/ros2_control/: dropbear_right_arm.macro.xacro  dropbear_right_arm.ros2_control.xacro
simple_closed_loop_mechanism/: CMakeLists.txt  package.xml
simple_closed_loop_mechanism/config/: controllers_configuration.yaml
simple_closed_loop_mechanism/launch/: gazebo_sim.launch.py
simple_closed_loop_mechanism/rviz/: rviz_sim.rviz
simple_closed_loop_mechanism/scripts/: joint1_control_node.py  joint1_controller.py
simple_closed_loop_mechanism/urdf/: ros2_control.xacro  simple_closed_loop_mechanism.urdf.xacro  transmission.xacro
(+877 files in other folders)
